--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 </head>
 <style>
     * {
@@ -53,13 +59,31 @@
 </style>
 <body>
     <div class="container">
-         <h1> Form</h1>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <input type="submit" value="Login">
-        </form>
+         <div class=" col-md-4">
+      <div  class="date-picker-2" placeholder="Recipient's username" id="ttry" aria-describedby="basic-addon2"></div>
+      <span class="" id="example-popover-2"></span> </div>
+    <div id="example-popover-2-content" class="hidden"> </div>
+    <div id="example-popover-2-title" class="hidden"> </div>
     </div>
     
 </body>
 </html>
+<script>
+$('.date-picker-2').popover({
+    html : true, 
+    content: function() {
+      return $("#example-popover-2-content").html();
+    },
+    title: function() {
+      return $("#example-popover-2-title").html();
+    }
+});
+$(".date-picker-2").datepicker({
+    onSelect: function(dateText) { 
+        $('#example-popover-2-title').html('<b>Avialable Appiontments</b>');
+        var html = '<button  class="btn btn-success">8:00 am – 9:00 am</button><br><button  class="btn btn-success">10:00 am – 12:00 pm</button><br><button  class="btn btn-success">12:00 pm – 2:00 pm</button>';
+        $('#example-popover-2-content').html('Avialable Appiontments On <strong>'+dateText+'</strong><br>'+html);
+        $('.date-picker-2').popover('show');
+    }
+});
+</script> 
