--- a/index.html
+++ b/index.html
@@ -196,17 +196,19 @@
         cursor: pointer;
       }
       @media (max-width: 768px) {
+        .date-picker-wrapper {
+          width: 500px;
+        }
         .time-slot-wrapper {
           display: none;
           background: white !important;
           top: -49px;
+          width: 430px !important;
+          left: -55px;
         }
         .date-picker {
           display: flex;
           justify-content: center;
-        }
-        .popup {
-          width: 500px !important;
         }
         .slot {
           width: 200px;
