--- a/index.html
+++ b/index.html
@@ -206,15 +206,19 @@
           padding: 5px;
           cursor: pointer;
         }
+        .time-slot-wrapper {
+          margin-left: 0px;
+          margin-top: 0px;
+        }
         .date-picker-wrapper {
-          width: 365px;
+          width: 375px;
         }
         .time-slot-wrapper {
           display: none;
           background: white !important;
           top: -130px;
           width: 360px !important;
-          left: -72px;
+          left: -35px;
         }
         .date-picker {
           display: flex;
