--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
         .time-slot-wrapper {
           display: none;
           background: white !important;
-          top: -130px;
+          top: -100px;
           width: 360px !important;
-          left: -35px;
+          left: -48px;
+          padding-bottom: 100px !important;
         }
         .date-picker {
           display: flex;
