--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
           margin-left: 0px;
           margin-top: 0px;
         }
-        .date-picker-wrapper {
-          width: 375px;
+        .date-picker-wrapper, .ui-datepicker {
+          width: 375px !important;
         }
         .time-slot-wrapper {
           display: none;
