--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
           margin-top: 0px;
         }
         .date-picker-wrapper, .ui-datepicker {
-          width: 375px !important;
+          width: 100% !important;
         }
         .time-slot-wrapper {
           display: none;
           background: white !important;
-          top: -85px;
-          width: 340px !important;
-          left: -32px;
+          top: -75px;
+          width: 345px !important;
+          left: -38px;
           padding-bottom: 100px !important;
         }
         .date-picker {
